redone version should be almost ready
git-svn-id: https://svn.mpi-sws.org/DS/freepastry/trunk@1285 c21dacaf-8602-0410-aacd-8bc41df2cbe7